<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Reporter</string>
    <string name="requests">Requests</string>
    <string name="crashes">Crashes</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_results">No Results</string>
    <string name="request_url">Request Url</string>
    <string name="request_method">Request Method</string>
    <string name="request_headers">Request Headers</string>
    <string name="request_time">Request Time</string>
    <string name="response_headers">Response Headers</string>
    <string name="response_body">Response Body</string>
    <string name="export_report">Export Report</string>
    <string name="export_title">Export Report</string>
    <string name="export_message">Do you Want Android Reporter Screen To Export Report Files into Your External Media Directory (Android/media/appPackage/Reports) ?</string>
    <string name="report_created">Report Created Successfully !!</string>
</resources>