<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="@string/request_url"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/requestUrl"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="@string/request_method"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/requestMethod"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="@string/request_time"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/requestTime"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="@string/request_headers"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/requestHeaders"
            android:layout_marginTop="4dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="@string/response_headers"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            android:id="@+id/responseHeaders"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="@string/response_body"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            android:id="@+id/responseBody"
            android:layout_height="match_parent" />

    </LinearLayout>

</ScrollView>